--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
                                     <div className="space-y-6 md:space-y-8 animate-fade-in">
                                         <div className="text-6xl md:text-8xl">🎁</div>
                                         <div className="space-y-2 md:space-y-4">
-                                            <h2 className="text-4xl md:text-5xl font-black text-rose-950 uppercase tracking-tighter">Your Husband</h2>
+                                            <h2 className="text-4xl md:text-5xl font-black text-rose-950 uppercase tracking-tighter">I'm your BEST Gift</h2>
                                             <p className="text-rose-900/60 text-lg md:text-xl font-medium leading-relaxed italic">I am your gift, and you are mine. I am yours, today and through all the eternities. ❤️</p>
                                         </div>
                                         <button onClick={() => setShowGift(false)} className="w-full bg-rose-50 text-rose-900 py-3 rounded-2xl font-bold hover:bg-rose-100 transition-colors">Close</button>
